[package]
name = "hello-wasm"
version = "0.1.0"
authors = "[Renan Nguyen phungnguyenhoang@gmail.com]"
decription = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2"